objects/LLC_BI__Collateral__c.object
<CustomObject>
    <description>Something pledged as security for repayment of a loan, to be forfeited in the event of a default.</description>
    <fields>
        <fullName>Appraisal_Needed_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Appraisal Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Appraisal_Review_Qs_Complete__c</fullName>
        <defaultValue>&apos;The Appraisal Review questions are updated&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Appraisal Review Qs Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Assessment_Method_2__c</fullName>
        <label>Assessment Method 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Statement</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Book Value</fullName>
                </value>
                <value>
                    <fullName>Dealer Value</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Market Value</fullName>
                </value>
                <value>
                    <fullName>NADA</fullName>
                </value>
                <value>
                    <fullName>Not A Purchase</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Purchase Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Assessment_Method_Date_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assessment Method Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Collateral_Narrative__c</fullName>
        <description>This field is used on Collateral Narrative section on Credit Memo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Coverage_Amount__c</fullName>
        <label>Coverage Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Deed_of_Trust__c</fullName>
        <label>Deed of Trust</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Facility_Owner__c</fullName>
        <label>Facility Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Financing_Purpose__c</fullName>
        <label>Financing Purpose</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Home Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Financing_Type__c</fullName>
        <label>Financing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>USDA/Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Flood_Coverage_Amount__c</fullName>
        <label>Flood Insurance Coverage Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Agent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Company_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Company City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Company_State__c</fullName>
        <label>Flood Insurance Company State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__US_States_Abbreviated</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Company_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Company Street Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Insurance_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Insurance Company Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Outdated_Assessment__c</fullName>
        <formula>IF(LLC_BI__Appraisal_Date__c &gt;= TODAY() - 3*365,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outdated Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Over_LTV_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to indicate on the collateral if the collateral is over its LTV limit.</description>
        <label>Over LTV Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Statutory_Construction_LTV_Limit__c</fullName>
        <description>Statutory Construction LTV Limit is populated from the Collateral Type</description>
        <formula>LLC_BI__Collateral_Type__r.CF_Statutory_Construction_LTV_Limit__c</formula>
        <label>Statutory Construction LTV Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Statutory_LTV_Limit__c</fullName>
        <description>Statutory LTV Limit is populated from the Collateral Type.</description>
        <formula>LLC_BI__Collateral_Type__r.CF_Statutory_LTV_Limit__c</formula>
        <label>Statutory LTV Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Type_of_Real_Estate__c</fullName>
        <label>Type of Real Estate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Unit</fullName>
                </value>
                <value>
                    <fullName>2 - 4 Units</fullName>
                </value>
                <value>
                    <fullName>5+ Units</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Vacant Land</fullName>
                </value>
                <value>
                    <fullName>Double Wide</fullName>
                </value>
                <value>
                    <fullName>Single Wide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Value_2__c</fullName>
        <label>Value 2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Value_Status__c</fullName>
        <label>Value Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimated</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatItemDetDesc1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of the collateral item 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatItemDetDesc2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of the collateral item 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatItemDetDesc3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of the collateral item 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatItemDetDescText1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Desc. text of the collateral item 1</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatItemDetDescText2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Desc. text of the collateral item 2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatItemDetDescText3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Desc. text of the collateral item 3</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__DrAcctExpDt__c</fullName>
        <description>Users populate this optional date field to define the debit account hold expiration date. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debit Account Hold Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__DrAcctHldDt__c</fullName>
        <description>Users populate this optional date field to define the debit account hold date. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debit Account Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__HldAcctType__c</fullName>
        <description>Users populate this optional field with the hold account type. By default, it is blank.</description>
        <label>Hold Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__APN__c</fullName>
        <description>Users populate this optional text field with the property parcel number (APN).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional: Enter the property parcel number (APN).</inlineHelpText>
        <label>APN</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Advance_Rate__c</fullName>
        <description>This field is optional and auto-populates based on the Collateral type. It is the percentage of the value of Collateral that a lender uses to determine the amount of a loan.</description>
        <formula>LLC_BI__Collateral_Type__r.LLC_BI__Advance_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of the value of collateral that a lender uses to determine the amount of a loan. This is a calculated field from the Collateral Type.</inlineHelpText>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Agricultural_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the piece of collateral is used for agricultural purposes. Checked = True. Unchecked = False.</description>
        <label>Agricultural Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Airframe_Engine_Log_Books_Description__c</fullName>
        <description>This field is optional and manually populated. It is a text area to detail information about the airframe and engine log books that are needed when securing a loan with titled aircraft collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Airframe/Engine Log Books Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Airport_Home_Base__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify which airport is the home base location for the titled aircraft collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Airport / Home Base</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Usage__c</fullName>
        <description>Users populate this optional field with the assets estimated annual mileage or hours of operation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Annual Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Appraisal_Date__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the date of most recent collateral value assessment.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of the last time the collateral value was assessed</inlineHelpText>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Assessment_Method__c</fullName>
        <description>This field is optional and manually populated. Use it to specify the method by which the collateral has been assessed.</description>
        <label>Assessment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Net Book Value</fullName>
                </value>
                <value>
                    <fullName>NADA</fullName>
                </value>
                <value>
                    <fullName>Dealer Value</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Purchase Price</fullName>
                </value>
                <value>
                    <fullName>Not A Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Authority_Number__c</fullName>
        <description>This optional field specifies the number of owners that have the authority to pledge this asset as collateral. It is manually populated.</description>
        <inlineHelpText>The number of owners of this asset that have the authority to pledge the asset as collateral.</inlineHelpText>
        <label>Authority Number</label>
        <summaryFilterItems>
            <field>LLC_BI__Account_Collateral__c.LLC_BI__Pledging_Authority__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Account_Collateral__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Avionics_Engines_Description__c</fullName>
        <description>This field is optional and manually populated. Use this field to describe the engines in the titled aircraft collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Avionics / Engines Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Block__c</fullName>
        <description>This field is optional and manually populated. Use this field to note the Real Estate Block Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Block</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Body_Style__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the body or style of titled collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Body Style</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Book_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox to specify that the collateral has been entered on the books. This field is typically used with Possessory Collateral types. Checked = True. Unchecked = False.</description>
        <label>Book Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually populated. It indicates the closest branch to the location of the collateral.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipName>Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CUSIP_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the CUSIP number for a piece of possessory collateral. A CUSIP number identifies most securities, including stocks of all registered U.S. and Canadian companies and U.S. government and municipal bonds.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CUSIP Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capacity__c</fullName>
        <description>Users populate this optional field with the asset size or capacity (e.g. weight capacity, gross rail load, tonnage, etc.).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Certificated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to indicate if the bank has possession of the collateral. Checked = True, Unchecked = False.</description>
        <label>Certificated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__City__c</fullName>
        <description>This field is optional and manually populated. It indicates the city where the collateral is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The city that this piece of Collateral is located at.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Affixed_to_a_Permanent_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the collateral is affixed to a permanent site (for example, a mobile home). Checked = True, Unchecked = False.</description>
        <label>Collateral Affixed to a Permanent Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Image__c</fullName>
        <description>An image that represents the Collateral described in the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a full URL path to an image resource.</inlineHelpText>
        <label>Collateral Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Agent__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the insurance agent with which the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_City__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the city of the insurance company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Company__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Phone__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the phone number of the insurance company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Policy_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the insurance policy number for the collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_State__c</fullName>
        <description>This field is optional and manually populated. Select the state of the insurance company where the collateral is insured from the picklist.</description>
        <label>Collateral Insurance State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Street__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of the insurance company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Zipcode__c</fullName>
        <description>This field is optional and manually populated. Specify the ZIP code for the address of the insurance company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Issued_By__c</fullName>
        <description>TThis field is optional and manually populated. Use this field to specify if the Lender or Other has issued this collateral. This field is used to map to Laser Pro and is only valid when working with a Savings/CD collateral subtype.</description>
        <label>Collateral Issued By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other Issuer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Issuer__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the issuer of the Collateral. This field is used to map to Laser Pro and is only valid when working with a Securities collateral subtype.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Issuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Legal_Description__c</fullName>
        <description>The user populates this optional text field with the legal description of the collateral. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the legal description for the collateral.</inlineHelpText>
        <label>Collateral Legal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Location__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the latitude and longitude of the collateral location. The field currently supports entry of up to 6 decimals.</description>
        <label>Collateral Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to store the name of the collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Rollup_Count__c</fullName>
        <description>Number field that represents the total count for all direct children of a collateral record. Used in Complex Collateral scenarios.</description>
        <label>Collateral Rollup Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This lookup field is required and manually populated. Use it to define the relationship to the collateral type.</description>
        <label>Collateral Type</label>
        <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Combined_Percent_Pledged__c</fullName>
        <description>This field is optional and automatically populated.  It is the total of all the Collateral Pledged records displayed as a percentage.</description>
        <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Total_Pledge_Amount__c / LLC_BI__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of this collateral that has been pledged.</inlineHelpText>
        <label>Combined Percent Pledged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Commercial_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify if the collateral is used for commercial purposes. Checked = True. Unchecked = False.</description>
        <label>Commercial Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Condition__c</fullName>
        <description>Users populate this optional picklist field with the asset condition (e.g. new or used).</description>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>